--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -7,7 +7,8 @@ Vagrant::Config.run do |config|
 
   config.vm.forward_port 8893, 8893
   config.vm.forward_port 8080, 8080
-
+  config.vm.network :hostonly, "172.16.0.2"
+  
   config.vm.share_folder "v-data", "/home/vagrant/data", "../data"
   config.vm.provision :chef_solo do |chef|
     
