--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -7,9 +7,9 @@ Vagrant::Config.run do |config|
 
   config.vm.forward_port 8893, 8893
   config.vm.forward_port 8080, 8080
-  config.vm.network :hostonly, "172.16.0.2"
+  config.vm.network :hostonly, "192.168.1.50"
   
-  config.vm.share_folder "v-data", "/home/vagrant/data", "../data"
+  config.vm.share_folder "v-data", "/opt/data", "../data"
   config.vm.provision :chef_solo do |chef|
     
   chef.add_recipe "tomcat-solr"
